--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@ plugins {
 }
 
 node {
+	distBaseUrl = 'https://direct.nodejs.org/dist/'
 	download = true
-	version = "9.11.1"
-	npmVersion = "5.6.0"
+	version = '14.19.3'
+	npmVersion = "5.6.0"	
 }
 
 //declare a build task
